<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68B9AEAE"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0A090C"
        android:layout_marginBottom="30dp"
        android:elevation="10dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/main_headline"
            android:textColor="#F0EDEE"
            android:textSize="36sp"
            app:fontFamily="@font/open_sans_light" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/calibratingButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/calibrate_button"
                android:onClick="calibrate"
                android:text="@string/calibrate_button"
                android:textSize="36sp"
                app:fontFamily="@font/open_sans_light" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/bayesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/locate_me_button"
                android:onClick="bayesian"
                android:text="@string/bayesian_button"
                android:textSize="36sp"
                app:fontFamily="@font/open_sans_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/particleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/credits_button"
                android:onClick="particles"
                android:text="@string/particle_button"
                android:textSize="36sp"
                app:fontFamily="@font/open_sans_light" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>