<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWifiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="30dp"
        android:background="#0A090C"
        android:elevation="10dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="WiFi"
            android:textColor="#F0EDEE"
            android:textSize="36sp"
            app:fontFamily="@font/open_sans_light"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/activity_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cellNameInput"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:hint="@string/cell_name_text"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    app:fontFamily="@font/open_sans_light"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sampleNumberInput"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:hint="@string/sample_number_text"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    app:fontFamily="@font/open_sans_light"/>

            </LinearLayout>

            <Button
                android:id="@+id/saveWifiData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_default_style"
                android:elevation="40dp"
                android:onClick="saveWifi"
                android:text="@string/save_wifi_button"
                app:fontFamily="@font/open_sans_light"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>