<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccelerometerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="30dp"
        android:background="#0A090C"
        android:elevation="10dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/accelerometer_headline"
            android:textColor="#F0EDEE"
            android:textSize="36sp"
            app:fontFamily="@font/open_sans_light" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:background="@drawable/activity_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/status"
            android:textColor="#000000"
            android:textSize="30sp"
            app:fontFamily="@font/open_sans_light" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <RadioButton
                android:id="@+id/stillButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/radio_still"
                android:textColor="#000000"
                android:textSize="20sp"
                app:fontFamily="@font/open_sans_light" />

            <RadioButton
                android:id="@+id/walkingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="Walking"
                android:textColor="#000000"
                android:textSize="20sp"
                app:fontFamily="@font/open_sans_light"/>

            <RadioButton
                android:id="@+id/runningButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Running"
                android:textColor="#000000"
                android:textSize="20sp"
                app:fontFamily="@font/open_sans_light"/>
        </RadioGroup>

        <EditText
            android:id="@+id/sampleNumberInput"
            android:layout_width="171dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:hint="Sample number"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            app:fontFamily="@font/open_sans_light"/>

        <TextView
            android:id="@+id/timeMissing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:fontFamily="@font/open_sans_light"/>

        <Button
            android:id="@+id/saveAccData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_default_style"
            android:elevation="40dp"
            android:onClick="onClickRecord"
            android:text="Record accelerometer data"
            app:fontFamily="@font/open_sans_light"/>

    </LinearLayout>


</RelativeLayout>