<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:srcCompat="@drawable/position_background">

    <ImageView
        android:id="@+id/floorPlan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_weight="0"
            android:text="@string/stride_length"
            android:textAllCaps="true"
            app:fontFamily="@font/open_sans_light" />

        <EditText
            android:id="@+id/strideLengthField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:ems="2"
            android:inputType="numberDecimal"
            app:fontFamily="@font/open_sans_light"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/initialBelief"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_default_style"
            android:elevation="40dp"
            android:onClick="initialBelief"
            android:text="@string/initial_belief"
            app:fontFamily="@font/open_sans_light" />

        <Button
            android:id="@+id/particleLocateMe"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="230dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_default_style"
            android:elevation="40dp"
            android:onClick="locateMe"
            android:text="@string/locate_me"
            app:fontFamily="@font/open_sans_light" />

        <TextView
            android:id="@+id/cellTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="230dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            app:fontFamily="@font/open_sans_light"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="562dp"
        android:layout_height="323dp"
        android:layout_alignStart="@+id/floorPlan"
        android:layout_alignLeft="@+id/floorPlan"
        android:layout_alignEnd="@+id/floorPlan"
        android:layout_alignRight="@+id/floorPlan"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trueAngle"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_weight="0"
            android:text="True angle!"
            android:textAllCaps="true"
            app:fontFamily="@font/open_sans_light" />

        <TextView
            android:id="@+id/calibratedAngle"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:text="Calibrated angle!"
            android:textAllCaps="true"
            app:fontFamily="@font/open_sans_light" />

        <Button
            android:id="@+id/decreaseCalibration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_default_style"
            android:elevation="40dp"
            android:onClick="decreaseCalibration"
            android:text="-"
            app:fontFamily="@font/open_sans_light" />

        <Button
            android:id="@+id/increaseCalibration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_default_style"
            android:elevation="40dp"
            android:onClick="increaseCalibration"
            android:text="+"
            app:fontFamily="@font/open_sans_light" />
    </LinearLayout>


</RelativeLayout>